--- a/Index.html
+++ b/Index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-<title> transformaciones con CSS </title>
-<meta charset="UTF-8">
-<meta name="viewport" content ="width=device-witdh, user-scalable=no, initial-scale=1,maximum-scale=1, minimum-scale=1">
-<linkk rel="stylesheet" hrf="estilos.css">
-</head>
+    <head>
+        <title>Transformaciones con CSS</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1">
+        <link rel="stylesheet" href="estilos.css">
+    </head>
 
-<body>
-
-<div class="contenedor">
-<div class= "caja"> Translate </div>
-<div class= "caja"> Rotate</div>
-<div class= "caja"> Scale </div>
-<div class= "caja"> Skew</div>
-</div>
-
-</body>
-
+    <body>
+        <div class="contenedor">
+            <div class="caja">Translate</div>
+            <div class="caja">Rotate</div>
+            <div class="caja">Scale</div>
+            <div class="caja">Skew</div>
+        </div>
+    </body>
 </html>
