Signed-off-by: Mateo0207 <78557721+Mateo0207@users.noreply.github.com>

--- a/Ejercicio en clase de transformaciones/index.html
+++ b/Ejercicio en clase de transformaciones/index.html
@@ -4,16 +4,16 @@
         <title>EJERCICIO EN CLASE</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1">
-        <link rel="stylesheet" href="estilos.css">
+        <link rel="stylesheet" href="estilos2.css">
     </head>
 
     <body>
         <div class="contenedor">
-            <div class="Triangulo">Translate</div>
-            <div class="Trapecio">Rotate</div>
-            <div class="Circulo">Scale</div>
-            <div class="Rombo">Skew</div>
+            <div class="triangulo"></div>
+            <div class="trapecio"></div>
+            <div class="circulo"></div>
+            <div class="rombo"></div>
         </div>
-    </div><div><a href="">Formas básicas con CSS</a></div>
+    </div><div><a href="https://tutorialesenlinea.es/2703-formas-basicas-con-css-triangulos-circulos-trapecios-rectangulos-cuadrados.html">Formas básicas con CSS</a></div>
     </body>
 </html>
